[package]
name = "blockchain-info"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2.22", features = ["full"] }
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
dotenv = "0.15.0"
